test/parse-errors/need-block-context.nz
f void()
	if if
		0
	else
		1
	match match
		some
			0
		none
			1
	match \
